# quality-api-case

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci-cd.yml
defects/: defect_reports.md
include/: quality_service.h
src/: main.cpp  quality_service.cpp
tests/: quality_service_test.cpp
web/: index.html
